# eightfish

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bak  FirstStage.Dockerfile  README.md  SecondStage.Dockerfile  build_docker.sh  build_docker_with_proxy.sh  build_docker_with_proxy_1st.sh  build_docker_with_proxy_small.sh  docker-compose-1node.yml  index.html  init_pg.sh  init_pg.sql  run_docker.sh  unit_tests.md
book/: book.toml
book/book/: 404.html  anatomy.html  chapter_1.html  complex_queries.html  crud.html  examples.html  features.html  get_started.html  index.html  intro.html  mapping.html  mvc.html  mvc_onchain_service.html  node_arch.html  openweb.html  print.html  searchindex.js  searchindex.json  sql_limits.html  tech_stack.html  tinyorm.html  workflows.html
book/src/: .md  SUMMARY.md  anatomy.md  complex_queries.md  crud.md  examples.md  features.md  get_started.md  intro.md  mapping.md  mvc.md  mvc_onchain_service.md  node_arch.md  openweb.md  sql_limits.md  tech_stack.md  tinyorm.md  workflows.md
docker/: FirstStage.Dockerfile  build_apps.sh  build_docker.sh  build_docker_with_proxy_1st.sh  build_services.sh  docker-compose-1node.yml  docker-compose-2node.yml  docker-compose-4node.yml  http_gate.Dockerfile  init_pg.sql  remove_images.sh  run_docker.sh  simple_app-a.Dockerfile  simple_app-b.Dockerfile  simple_app-c.Dockerfile  simple_app-d.Dockerfile  simple_app.Dockerfile  subnode.Dockerfile  subxtproxy.Dockerfile
docs/: docker.md  eightfish_app_tutorial.md  flow_tests.md  upgrade.md
eightfish-derive/: Cargo.toml  main_bak.rs
eightfish-derive/src/: eight_fish_model.rs  lib.rs  lib_bak.rs
eightfish-derive/tests/: integration_test.rs
examples/simple/: Cargo.toml  nodemon.sh  spin-a.toml  spin-b.toml  spin-c.toml  spin-d.toml  spin.toml  start.sh
examples/simple/flow_tests/: README.md  get_one_article.hurl  init_pg.sql  new_article.hurl  node2_new_article.hurl  node3_new_article.hurl  node4_new_article.hurl  pg_schema.sql  test.hurl  version.hurl
examples/simple/src/: article.rs  lib.rs
examples/simple2/: Cargo.toml  spin.toml
examples/simple2/flow_tests/: del_article.hurl  get_one_article.hurl  update_article.hurl
examples/simple2/src/: article.rs
http_gate/: Cargo.toml  spin.toml
http_gate/src/: lib.rs
redis_worker/: Cargo.toml  spin.toml
redis_worker/src/: lib.rs  worker.rs
scripts/: testpg.sh
sdk/: Cargo.toml
sdk/src/: handler.rs
sdk/src/recognizer/: mod.rs  nfa.rs
sdk/src/router_m/: mod.rs
spin_worker/: Cargo.toml
spin_worker/src/: lib.rs
src/: app.rs  handler.rs  lib.rs  main.rs  request.rs  response.rs  router.rs
src/recognizer/: mod.rs  nfa.rs
src/router_m/: mod.rs  router.rs
subnode/: Cargo.toml  README.md
subnode/docs/: rust-setup.md
subnode/node/: Cargo.toml
subnode/node/src/: chain_spec.rs  command.rs  command_helper.rs  rpc.rs  service.rs
subnode/pallets/eightfish/: Cargo.toml
subnode/pallets/eightfish/rpc/: Cargo.toml
subnode/pallets/eightfish/rpc/src/: lib.rs
subnode/pallets/eightfish/runtime-api/: Cargo.toml
subnode/pallets/eightfish/runtime-api/src/: lib.rs
subnode/pallets/eightfish/src/: lib.rs  mock.rs  tests.rs
subnode/pallets/openforum/: Cargo.toml
subnode/pallets/openforum/rpc/: Cargo.toml
subnode/pallets/openforum/rpc/src/: lib.rs
subnode/pallets/openforum/runtime-api/: Cargo.toml
subnode/pallets/openforum/runtime-api/src/: lib.rs
subnode/runtime/: Cargo.toml
subnode/runtime/src/: lib.rs
subxtproxy/: Cargo.toml  metadata.scale
subxtproxy/src/: main.rs
upgrade/: .env  Cargo.toml  nodemon.sh
upgrade/.cargo/: config
upgrade/src/: main.rs
