[package]
name = "eightfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#eightfish-derive = { version = "0.1.0", path = "eightfish-derive" }
#typemap = "0.3"
anyhow = "1"
form_urlencoded = "1.1"
json-digest = "0.0.16"

serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }


[worksapce]


