[package]
name = "eightfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
form_urlencoded = "1.1"
json-digest = "0.0.16"

serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }

# [workspace]
# members = [
#   # "subnode", subnode need to be build separately, as it contains a new root of workspace.
#   "subxtproxy",
#   "spin_worker",
#   "eightfish-derive",
#   "http_gate",
#   "examples/simple",
#   "examples/simple2",
#   "upgrade",
# ]
