[package]
name = "eightfish-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
json-digest = "0.0.16"
sql-builder = "3.1"

[dev-dependencies]
eightfish-sdk = {path = "../sdk"}
spin-sdk = "3.0"
