[package]
name = "eightfish-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
form_urlencoded = "1.1"
json-digest = "0.0.16"

serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
