[package]
name    = "spin_worker"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
spin-sdk = "3.0"
form_urlencoded = "1.1"
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
json-digest = "0.0.16"
hex = "0.4.3"
bs58 = "0.4.0"

eightfish-sdk = {path="../sdk"}

