[package]
name = "subxtproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.13"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
subxt = { git = "https://github.com/paritytech/subxt", tag = "v0.24.0" }
sp-keyring = "6.0.0"
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"

redis = { version = "0.17.0", features = ["tokio-comp"] }
#futures-util = { version = "0.3.15", default-features = false, optional = true }

serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0' }

sp-core = "6.0.0"

#[patch.crates-io]
#sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
#sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }

