[package]
name = "eightfish-upgrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"]}
tokio-stream = { version = "0.1.11"}
redis = { version = "0.17.0", features = ["tokio-comp"] }
dotenv = "0.15"
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0' }

futures = "0.3.13"
subxt = { git = "https://github.com/paritytech/subxt", tag = "v0.24.0" }
sp-keyring = "6.0.0"
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full", "bit-vec"] }
